// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrandItem should match snapshot when not selected 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#efefef",
      "borderRadius": 5,
      "opacity": 1,
      "padding": 10,
    }
  }
  testID="brand-item"
>
  <Text
    style={
      {
        "color": "#000000",
      }
    }
  >
    Brand Name
  </Text>
</View>
`;

exports[`BrandItem should match snapshot when selected 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#0040ff",
      "borderRadius": 5,
      "opacity": 1,
      "padding": 10,
    }
  }
  testID="brand-item"
>
  <Text
    style={
      {
        "color": "#FFFFFF",
      }
    }
  >
    Brand Name
  </Text>
</View>
`;
